# talks

./: README.md
2024-01-18-frankfurt-kubernetes-meetup/demo/: install.md  kind.config
2024-01-18-frankfurt-kubernetes-meetup/demo/demo2/: priv-esc.sh
2024-01-18-frankfurt-kubernetes-meetup/demo/demo5/: namespace.yaml
2024-01-18-frankfurt-kubernetes-meetup/demo/demo8/: secret.yaml
2024-01-18-frankfurt-kubernetes-meetup/demo/demo9/: encryptionconfig.yaml
k8s_meetup_frankfurt-kubernetes_security/demo/: README.md
k8s_meetup_frankfurt-kubernetes_security/demo/demo4/: rbac.yaml
k8s_meetup_frankfurt-kubernetes_security/demo/demo5/: pod.yaml
k8s_meetup_frankfurt-kubernetes_security/demo/demo6/: network-policy.yaml
k8s_meetup_frankfurt-kubernetes_security/demo/demo7/: pod.yaml
troopers23-testing_and_fuzzing_admission_controllers/demo/: cmd-fu  cmd-gs  crd.yaml  faulty-talk-crash.yaml  faulty-talk.yaml  kubefuzz-cfg-tr23.yaml
troopers23-testing_and_fuzzing_admission_controllers/demo/ac/: Cargo.toml  Dockerfile  deployment.yaml  validatingwebhook.yaml
troopers23-testing_and_fuzzing_admission_controllers/demo/ac/certs/: server.crt  server.key
troopers23-testing_and_fuzzing_admission_controllers/demo/ac/src/: args.rs  main.rs
troopers23-testing_and_fuzzing_admission_controllers/demo/talks/: talk-0.yaml  talk-1.yaml  talk-10.yaml  talk-11.yaml  talk-12.yaml  talk-13.yaml  talk-14.yaml  talk-15.yaml  talk-16.yaml  talk-17.yaml  talk-18.yaml  talk-19.yaml  talk-2.yaml  talk-20.yaml  talk-21.yaml  talk-22.yaml  talk-23.yaml  talk-24.yaml  talk-25.yaml  (+18 more)
