[package]
name = "sample_ad"
version = "0.1.0"
edition = "2021"
authors = ["avolens.com"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1"
tracing-subscriber = "0.2"
axum = "0.6.18"
kube = { version = "0.78.0", features = ["runtime", "admission", "derive"] }
schemars = "0.8.6"
tokio = { version = "1.21.2", features = ["full"] }
log = "0.4.17"
pretty_env_logger = "0.3"
anyhow = "1.0.65"
clap = {version = "4.2.7",features = ["derive","env"]}
serde = { version = "1.0.162", features = ["derive"] }
serde_json = "1.0.96"
rustls = "0.21.1"
axum-server = {version = "0.5.0", features = ["tls-rustls"]}


[dependencies.k8s-openapi]
version = "0.17.0"
features = ["v1_20"]
